	-> collection manager remodelled:
		add to collection, remove from collection and duplicate document now also possible for collection owner
		removed my-docs table and merged it with the documents table
	-> rtf export replaced by docx export
	
0.7.6:
	-> fixed minor bug in remember credentials functionality: last logged in user is remembered
	-> deleting a page added
	-> proxy settings
	-> display status and user in thumbnail overview
	
0.7.7:
	-> bugfix: could not load local document any more
	
0.7.8:
	-> rotate image 90 degrees
	-> bugfix: baseline focus with angle >180 degrees were displayed upside down
	-> export bugs fixed
	-> drawing direction arcs for baselines
	
0.7.9:
	-> adding new points on boundary only possible when holding down ctrl/cmd key (prevents adding new points by accident)
	-> bugfix: adding gap tag at the end of last line of region led to crash 
	-> rendering of polyrectangle around baselines (and selection of the baselines within those)
	-> locking zoom on focus possible (via wrench tool on canvas toolbar)
	-> auto login feature
	-> fixed catti bug (whitespace from recieved suffix removed)
	-> catti server made reentrant (multiple users from different clients now possible)
	-> adding paragraphs in textfield possible via shift+enter or dedicated button on transcription toolbar
	
0.8.0:
	-> profiles
	-> show complete img and transcript url in DocOverviewWidget

0.8.1:
	-> multiple bugfixes
	-> bugfix: after tag was added, "Tags under cursor" and "Properties" were not updated
	-> deleteLineIfBaselineDeleted property (configure via wrench tool)
	-> virtual keyboard configurable in gui (1st version)
	-> moved tag & text search to main search dialog in documents view
	-> find text and tag it
	
0.8.2:
	-> bugfixes: "no transcript loaded" when saving twice & virtual keyboards not working
	
0.8.3:
	-> splitting regions bug fixed
	-> swapped horizontal / vertical splitting semantic
	-> split parent line too if splitting baselines
	
	
	

	